// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sitemap renders empty if needed 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<urlset 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
</urlset>"
`;

exports[`sitemap renders with a single loc-only entry 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<urlset 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url>
    <loc>https://www.example.com</loc>
  </url>
</urlset>"
`;

exports[`sitemap renders with alternatives 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<urlset 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url 
    xmlns:xhtml=\\"http://www.w3.org/1999/xhtml\\">
    <loc>https://www.example.com</loc>
    <xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://en.example.com\\" />
    <xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://fr.example.com\\" />
  </url>
</urlset>"
`;

exports[`sitemap renders with multiple loc-only entries 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<urlset 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url>
    <loc>https://www.example.com</loc>
  </url>
  <url>
    <loc>https://www.example.com/test</loc>
  </url>
</urlset>"
`;

exports[`sitemap renders with multiple optional entries 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<urlset 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url>
    <loc>https://www.example.com</loc>
    <lastmod>1970-01-01T00:00:00.001Z</lastmod>
    <changefreq>daily</changefreq>0
  </url>
  <url>
    <loc>https://www.example.com/test</loc>
    <lastmod>1970-01-01T00:00:00.000Z</lastmod>
    <changefreq>weekly</changefreq>
    <priority>0.2</priority>
  </url>
</urlset>"
`;

exports[`sitemapindex renders empty if needed 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<sitemapindex 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
</sitemapindex>"
`;

exports[`sitemapindex renders with a single entry 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<sitemapindex 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <sitemap>
    <loc>https://example.com/sitemap.0.xml</loc>
  </sitemap>
</sitemapindex>"
`;

exports[`sitemapindex renders with multiple entries 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<sitemapindex 
  xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <sitemap>
    <loc>https://example.com/sitemap.0.xml</loc>
  </sitemap>
  <sitemap>
    <loc>https://example.com/sitemap.1.xml</loc>
  </sitemap>
</sitemapindex>"
`;
